Update map file and add license info

--- a/index.html
+++ b/index.html
@@ -57,7 +57,14 @@
         </main>
 
         <footer>
-            <p>SVG 지도 퀴즈 게임</p>
+            <p>
+                Map data by <a href="https://github.com/flekschas" target="_blank">flekschas</a>, 
+                available from <a href="https://github.com/flekschas/simple-world-map" target="_blank">simple-world-map</a>, 
+                is licensed under <a href="https://creativecommons.org/licenses/by-sa/3.0/" target="_blank">CC BY-SA 3.0</a>.
+            </p>
+            <p>
+                This game is also licensed under <a href="https://creativecommons.org/licenses/by-sa/3.0/" target="_blank">CC BY-SA 3.0</a>.
+            </p>
         </footer>
     </div>
 
