Fix bugs and improve features

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
                     <div id="progress-bar-inner"></div>
                 </div>
                 <div id="quiz-header">
+                    <button id="back-to-main-during-quiz-btn">메인으로</button>
                     <span id="question-counter"></span>
                     <span id="score">점수: 0</span>
                 </div>
