Save map quiz progress, debugging needed

--- a/index.html
+++ b/index.html
@@ -31,7 +31,10 @@
                     <div id="progress-bar-inner"></div>
                 </div>
                 <div id="quiz-header">
-                    <button id="back-to-main-during-quiz-btn">메인으로</button>
+                    <div class="quiz-header-left">
+                        <button id="back-to-main-during-quiz-btn" title="메인으로 돌아가기"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" width="24" height="24"><path d="M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8h5z"/></svg></button>
+                        <button id="zoom-out-btn" class="hidden" title="전체 지도 보기"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" width="24" height="24"><path d="M15.5 14h-.79l-.28-.27A6.471 6.471 0 0 0 16 9.5 6.5 6.5 0 1 0 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14zM7 9h5v1H7z"/></svg></button>
+                    </div>
                     <span id="question-counter"></span>
                     <span id="score">점수: 0</span>
                 </div>
