--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <main id="main-content">
             <!-- 시작 화면 -->
             <section id="start-screen">
+                <button id="settings-btn" class="settings-btn" title="설정">⚙️</button>
                 <h2>퀴즈를 선택하세요</h2>
                 <div class="quiz-selection">
                     <button id="start-flag-quiz" class="quiz-btn">🌍 국기 보고 이름 맞히기</button>
@@ -59,6 +60,28 @@
                 </div>
             </section>
         </main>
+
+        <!-- 설정 모달 -->
+        <div id="settings-modal" class="modal-overlay hidden">
+            <div class="modal-content">
+                <button id="close-settings-btn" class="close-btn">&times;</button>
+                <h2>설정</h2>
+                <div class="setting-option">
+                    <span>주요 국가만</span>
+                    <label class="switch">
+                        <input type="checkbox" id="major-countries-toggle">
+                        <span class="slider round"></span>
+                    </label>
+                </div>
+                <div class="setting-option">
+                    <span>주관식으로 변경 (기본: 객관식)</span>
+                    <label class="switch">
+                        <input type="checkbox" id="question-type-toggle">
+                        <span class="slider round"></span>
+                    </label>
+                </div>
+            </div>
+        </div>
 
         <footer>
             <p>
